# hexagonal-calculator

./: .coveragerc  .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytype.cfg  tutorial.db
src/calculator/: __init__.py
src/calculator/adapters/db/: alembic.ini  orm.py
src/calculator/adapters/db/migrations/: env.py
src/calculator/adapters/db/migrations/versions/: 0964880e1c92_.py  7e73621c975d_.py
src/calculator/adapters/entrypoints/api/: app.py  base.py
src/calculator/adapters/entrypoints/api/v1/: route_calculate.py
src/calculator/adapters/entrypoints/api/v2/: route_calculate.py
src/calculator/adapters/repositories/: calculation.py
src/calculator/adapters/services/: operands.py
src/calculator/adapters/unit_of_works/: calculation.py
src/calculator/adapters/use_cases/: calculate.py
src/calculator/configurator/: containers.py  settings.py
src/calculator/domain/model/: model.py  schemas.py
src/calculator/domain/ports/repositories/: calculation.py
src/calculator/domain/ports/services/: operands.py
src/calculator/domain/ports/unit_of_works/: calculation.py
src/calculator/domain/ports/use_cases/: calculate.py
tests/: conftest.py  fake_container.py  fake_repository.py  fake_uow.py  test_domain_models.py  test_services.py
tests/integrations/: test_api.py  test_calculation_uow.py  test_calculation_use_case.py  test_flask_api.py
tests/repositories/: test_calculation.py
tests/unit_of_works/: test_calculation_uow.py
