[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calculator"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "dependency-injector >=4.41.0",
    "marshmallow >=3.19.0",
    "icontract >=2.6.2",
    "python-ulid >=1.1.0",
    "alembic ==1.9.3",
    "SQLAlchemy ==1.4.46",
    "fastapi >=0.95.0",
    "uvicorn >=0.21.1",
]


[project.optional-dependencies]
dev = [
    "black >=23.1.0",
    "isort >=5.12.0",
    "autoflake >=1.4",
    "flake8 >=6.0.0",
    "pre-commit >=2.21.0",
    "pytype >= 2023.2.17 ",
    "bandit >= 1.7.4",
    "flake8-bugbear >= 22.12.6",
    ]
test = [
    "pytest ==7.1.3",
    "pytest-cov == 3.0.0",
    "httpx >=0.23.3",
    "pytest-asyncio ==0.21.0",
]


[tool.isort]
profile = "black"
py_version = 39
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration relatively slow (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"